{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 8,
  "lineage": "4e51d993-0e50-2a3e-be54-11fe77b65cb5",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:336670698191:instance/i-04f9397cd1a744260",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f9397cd1a744260",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2c1c8af956e1a7c"
              }
            ],
            "primary_network_interface_id": "eni-0d2c1c8af956e1a7c",
            "private_dns": "ip-10-70-2-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.70.2.66",
            "public_dns": "ec2-44-193-26-252.compute-1.amazonaws.com",
            "public_ip": "44.193.26.252",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f340e99a6b506d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a00f2388cd2ecc76",
            "tags": {
              "name": "bastion-host-admin"
            },
            "tags_all": {
              "name": "bastion-host-admin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f069072f5451abbf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "i-04f9397cd1a744260",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bastion.aws_key_pair.my_ssh_key",
            "module.bastion.aws_security_group.bastion_sg",
            "module.bastion.data.aws_ami.ubuntu",
            "module.network.aws_subnet.priv_sub",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:security-group/sg-0f069072f5451abbf",
            "description": "Sg admin host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f069072f5451abbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "188.163.44.234/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-sg",
            "name_prefix": "",
            "owner_id": "336670698191",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "bastion-sg"
            },
            "tags_all": {
              "name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "sg-0f069072f5451abbf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_subnet.priv_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.dns_alb",
      "mode": "data",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:336670698191:loadbalancer/app/k8s-default-backend-b0182b4151/5928bdde4e6971b6",
            "arn_suffix": "app/k8s-default-backend-b0182b4151/5928bdde4e6971b6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-default-backend-b0182b4151-1157290908.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:336670698191:loadbalancer/app/k8s-default-backend-b0182b4151/5928bdde4e6971b6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-default-backend-b0182b4151",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-060e5a7153746d25e",
              "sg-06cfdbe69b6039953"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005d737db82900f42"
              },
              {
                "subnet_id": "subnet-0a00f2388cd2ecc76"
              }
            ],
            "subnets": [
              "subnet-005d737db82900f42",
              "subnet-0a00f2388cd2ecc76"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "priv-cluster-eks",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "default/backend"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dns_alb",
      "mode": "data",
      "type": "aws_lb",
      "name": "monitor_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:336670698191:loadbalancer/app/k8s-monitori-grafanai-e0a8e86cfc/ad4b16aec5834083",
            "arn_suffix": "app/k8s-monitori-grafanai-e0a8e86cfc/ad4b16aec5834083",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-monitori-grafanai-e0a8e86cfc-2124470231.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:336670698191:loadbalancer/app/k8s-monitori-grafanai-e0a8e86cfc/ad4b16aec5834083",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-monitori-grafanai-e0a8e86cfc",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-060e5a7153746d25e",
              "sg-065e8fc555906ed5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005d737db82900f42"
              },
              {
                "subnet_id": "subnet-0a00f2388cd2ecc76"
              }
            ],
            "subnets": [
              "subnet-005d737db82900f42",
              "subnet-0a00f2388cd2ecc76"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "priv-cluster-eks",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "monitoring/grafana-ingress"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0fbf1569438a6e",
            "arn": "arn:aws:ec2:us-east-1:336670698191:elastic-ip/eipalloc-00e0fbf1569438a6e",
            "association_id": "eipassoc-006f6f4efbf39eb65",
            "domain": "vpc",
            "id": "eipalloc-00e0fbf1569438a6e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e0d8a413855cb0c",
            "private_dns": "ip-10-70-2-98.ec2.internal",
            "private_ip": "10.70.2.98",
            "public_dns": "ec2-35-171-208-169.compute-1.amazonaws.com",
            "public_ip": "35.171.208.169",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_data_panel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:internet-gateway/igw-0cc20d64ae5faf16f",
            "id": "igw-0cc20d64ae5faf16f",
            "owner_id": "336670698191",
            "region": "us-east-1",
            "tags": {
              "name": "igw-data-panel"
            },
            "tags_all": {
              "name": "igw-data-panel"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0fbf1569438a6e",
            "association_id": "eipassoc-006f6f4efbf39eb65",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-044015d34c2a71288",
            "network_interface_id": "eni-01e0d8a413855cb0c",
            "private_ip": "10.70.2.98",
            "public_ip": "35.171.208.169",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a00f2388cd2ecc76",
            "tags": {
              "name": "my-nat"
            },
            "tags_all": {
              "name": "my-nat"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:route-table/rtb-0fc375ecdc730a200",
            "id": "rtb-0fc375ecdc730a200",
            "owner_id": "336670698191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044015d34c2a71288",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "priv-rt"
            },
            "tags_all": {
              "name": "priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "rtb-0fc375ecdc730a200",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_nat_gateway.my_nat",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:route-table/rtb-09418b869a2c1372a",
            "id": "rtb-09418b869a2c1372a",
            "owner_id": "336670698191",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc20d64ae5faf16f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "pub-rt"
            },
            "tags_all": {
              "name": "pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "rtb-09418b869a2c1372a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a744b409df4e309",
            "region": "us-east-1",
            "route_table_id": "rtb-0fc375ecdc730a200",
            "subnet_id": "subnet-08d4ae4ac25526fc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_nat_gateway.my_nat",
            "module.network.aws_route_table.priv_rt",
            "module.network.aws_subnet.priv_sub",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bccabb766283e424",
            "region": "us-east-1",
            "route_table_id": "rtb-0fc375ecdc730a200",
            "subnet_id": "subnet-0dd5575dbb9fccf89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_nat_gateway.my_nat",
            "module.network.aws_route_table.priv_rt",
            "module.network.aws_subnet.priv_sub",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ca4add34e731903",
            "region": "us-east-1",
            "route_table_id": "rtb-09418b869a2c1372a",
            "subnet_id": "subnet-0a00f2388cd2ecc76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_route_table.pub_rt",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603db9dfad413a02",
            "region": "us-east-1",
            "route_table_id": "rtb-09418b869a2c1372a",
            "subnet_id": "subnet-005d737db82900f42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw_data_panel",
            "module.network.aws_route_table.pub_rt",
            "module.network.aws_subnet.pub_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:subnet/subnet-08d4ae4ac25526fc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.70.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4ae4ac25526fc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336670698191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "priv-sub-0"
            },
            "tags_all": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "priv-sub-0"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "subnet-08d4ae4ac25526fc0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_data_panel"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:subnet/subnet-0dd5575dbb9fccf89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.70.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd5575dbb9fccf89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336670698191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "priv-sub-1"
            },
            "tags_all": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "priv-sub-1"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "subnet-0dd5575dbb9fccf89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:subnet/subnet-0a00f2388cd2ecc76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.70.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a00f2388cd2ecc76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "336670698191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "pub-sub-0"
            },
            "tags_all": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "pub-sub-0"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "subnet-0a00f2388cd2ecc76",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_data_panel"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:subnet/subnet-005d737db82900f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.70.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005d737db82900f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "336670698191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "pub-sub-1"
            },
            "tags_all": {
              "kubernetes.io/cluster/priv-cluster-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "pub-sub-1"
            },
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "subnet-005d737db82900f42",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_data_panel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:vpc/vpc-0e7ba37d6b435c7a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.70.0.0/16",
            "default_network_acl_id": "acl-08dce5e8e68239d9d",
            "default_route_table_id": "rtb-0a3fa8a529b92a32e",
            "default_security_group_id": "sg-0b09c5a4e12662382",
            "dhcp_options_id": "dopt-09a5de02bb2a0880e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7ba37d6b435c7a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3fa8a529b92a32e",
            "owner_id": "336670698191",
            "region": "us-east-1",
            "tags": {
              "name": "my-vpc-data-panel"
            },
            "tags_all": {
              "name": "my-vpc-data-panel"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "vpc-0e7ba37d6b435c7a4",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:336670698191:security-group/sg-000076f232444bb6f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000076f232444bb6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "db-mysql-sg",
            "name_prefix": "",
            "owner_id": "336670698191",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e7ba37d6b435c7a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "336670698191",
            "id": "sg-000076f232444bb6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_subnet.priv_sub",
            "module.network.aws_vpc.vpc_data_panel"
          ]
        }
      ]
    }
  ]
}